--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "18.2.7",
     "@types/styled-components": "^5.1.26",
     "autoprefixer": "10.4.15",
+    "aws-sdk": "^2.1457.0",
     "axios": "^1.5.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
