--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_BACKEND_URL=http://127.0.0.1:3333
+NEXT_PUBLIC_BACKEND_URL=http://127.0.0.1:3333
 # Development API URL
 API_URL_DEV=https://example-dev.com/api
 
