--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@types/react-dom": "18.2.7",
     "@types/styled-components": "^5.1.26",
     "autoprefixer": "10.4.15",
-    "aws-sdk": "^2.1457.0",
+    "aws-sdk": "^2.1464.0",
     "axios": "^1.5.0",
+    "cors": "^2.8.5",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "idb": "^7.1.1",
     "js-cookie": "^3.0.5",
+    "jszip": "^3.10.1",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
